--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "dependencies": {
+    "@axe-core/puppeteer": "^4.6.1",
     "jest": "^29.5.0",
-    "puppeteer": "^19.8.5"
+    "jest-image-snapshot": "^6.1.0",
+    "puppeteer": "^19.9.0"
   },
   "devDependencies": {
     "prettier": "^2.8.7"
   },
   "scripts": {
-    "test": "jest --forceExit"
+    "test": "jest --forceExit --detectOpenHandles",
+    "test-emulacion-de-dispositivos": "jest --forceExit --detectOpenHandles __tests__/emulacionDeDispositivos.test.js",
+    "test-captura-de-pantalla": "jest --forceExit --detectOpenHandles __tests__/capturasDepantalla.test.js",
+    "test-visual": "jest --forceExit --detectOpenHandles __tests__/visual.test.js",
+    "test-pdf": "jest --forceExit --detectOpenHandles __tests__/generacionPDF.test.js",
+    "test-accesibilidad": "jest --forceExit --detectOpenHandles __tests__/accesibilidad.test.js",
+    "test-performance": "jest --forceExit --detectOpenHandles __tests__/performance.test.js"
   }
 }
